# alphasense_acp_bridge

./: .gitlab-ci.yml  CHANGELOG.rst  LICENSE  README.md
acp/: CMakeLists.txt  package.xml
acp/include/sev/acp/: serialization.h  serialization_base.h  serialization_modern.h  types.h
acp/specs/: messageheader.ksy  notification.ksy  opstate.ksy  pose.ksy  posefloat.ksy  poseint.ksy  rot.ksy  wheelodometryint.ksy  wheelodometryintegrated.ksy  wheelodometrypose.ksy  wheelodometrywheelticks.ksy  wheelodometrywheelvelocity.ksy
acp_external_bridge/: CMakeLists.txt  package.xml
acp_external_bridge/include/sev/acp_external_bridge/: cli.h
acp_external_bridge/src/: bridge.cc  cli.cpp
acp_ros_conversions/: CMakeLists.txt  package.xml
acp_ros_conversions/include/sev/acp_ros_conversions/: conversions.h  cuckoo_wrapper.h
acp_ros_conversions/src/: conversions.cpp
acp_udp/: CMakeLists.txt  package.xml
acp_udp/include/sev/acp_udp/: port.h  receiver.h  sender.h
acp_udp/src/: inspector.cpp
