<?xml version="1.0"?>
<package format="2">
  <name>sev_acp</name>
  <version>7.0.1</version>
  <description>Sevensense ACP message definitions and serialization.</description>
  <maintainer email="developer@sevensense.ch">Sevensense developers</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>sevencpp_build</build_depend>
</package>
