<?xml version="1.0"?>
<package format="2">
  <name>sev_acp_ros_conversions</name>
  <version>8.0.0</version>
  <description>Translation between sev_acp and ros.</description>
  <maintainer email="developer@sevensense.ch">Sevensense developers</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>sevencpp_build</build_depend>
  <depend>geometry_msgs</depend>
  <depend>state_machine_msgs</depend>
  <depend>atlas_msgs</depend>
  <depend>minkindr_conversions</depend>
  <build_depend>roscpp</build_depend>
  <depend>sev_acp</depend>

</package>
