<?xml version="1.0"?>
<package format="2">
  <name>sev_acp_udp</name>
  <version>10.2.1</version>
  <description>UDP support package for sev_acp.</description>
  <maintainer email="developer@sevensense.ch">Sevensense developers</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>sevencpp_build</build_depend>
  <depend>sev_acp</depend>
</package>
